fix(container): avoid large container that causes horizontal scroll

--- a/assets/site.css
+++ b/assets/site.css
@@ -1387,12 +1387,12 @@ pre code {
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 690px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 890px;
   }
 }
 .container-fluid {
