--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -26,3 +26,17 @@
 
 // Menu size
 @header-size: 280px;
+
+//== Container sizes
+//
+//## Define the maximum width of `.container` for different screen sizes.
+
+// Medium screen / desktop
+@container-desktop:            ((940px + @grid-gutter-width) - @header-size);
+//** For `@screen-md-min` and up.
+@container-md:                 @container-desktop;
+
+// Large screen / wide desktop
+@container-large-desktop:      ((1140px + @grid-gutter-width) - @header-size);
+//** For `@screen-lg-min` and up.
+@container-lg:                 @container-large-desktop;
